syntax = "proto3";
package Protobuf;
option csharp_namespace = "Communication.Proto";

enum ObjType { //可能出现在地图上的各种物品
  People = 0;  //人
  Block = 1;   //墙体
  Dish = 2;    //食材
  Tool = 3;    //道具
  Trigger = 4; //触发器
  ObjTypeSize = 5;
}
enum BlockType {  //标1的物品扔出碰到会反弹，标0的会穿过去
  Wall = 0;       // 1
  Table = 1;      // 0
  FoodPoint = 2;  // 1
  Cooker = 3;     // 0
  RubbishBin = 4; // 0
  TaskPoint = 5;  // 1
  BlockTypeSize = 6;
}
enum DishType {
  DishEmpty = 0;
  //以下为食材
  Wheat = 1;   //麦子
  Rice = 2;    //水稻
  Tomato = 3;  //番茄
  Egg = 4;     //鸡蛋
  Beef = 5;    //牛肉
  Pork = 6;    //猪肉
  Potato = 7;  //土豆
  Lettuce = 8; //生菜
  DishSize1 = 9;
  //以下为中间产物
  Flour = 10;   //面粉
  Noodle = 11;  //面条
  Bread = 12;   //面包片
  Ketchup = 13; //番茄酱
  //以下为菜品
  CookedRice = 14;           //米饭
  TomatoFriedEgg = 15;       //番茄炒蛋
  TomatoFriedEggNoodle = 16; //西红柿鸡蛋面
  BeefNoodle = 17;           //清青牛拉
  OverRice = 18;             //盖浇饭
  Barbecue = 19;             //烤肉
  FrenchFries = 20;          //薯条
  Hamburger = 21;            //汉堡
  SpicedPot = 22;            //香锅
  SpicedPot3 = 23;
  SpicedPot4 = 24;
  SpicedPot5 = 25;
  SpicedPot6 = 26;
  DishSize2 = 27;
  //以下为垃圾
  OverCookedDish = 28;
  DarkDish = 29; //黑暗料理
  CookingDish = 30;
  DishSize3 = 31;
}
enum ToolType {     //道具
  ToolEmpty = 0;    //
  TigerShoes = 1;   //虎头鞋，穿上加速，扔掉恢复原速
  SpeedBuff = 2;    //加速，一定时间内加速
  StrengthBuff = 3; //加力量，一定时间内增加扔物品的距离
  TeleScope = 4;    //望远镜，增加视野范围
  Condiment = 5;    //调料，提交香锅时专用
  Fertilizer = 6;   //肥料，加速做菜
  BreastPlate = 7;  //护心镜，防止各种攻击性道具
  SpaceGate = 8;    //传送门，瞬间传送到指定地点
  // Eye = 9;
  WaveGlueBottle = 9; //滔牌胶水，踩上后会减速，过一段时间自行消失
  LandMine = 10;    //放置地雷
  TrapTool = 11;    //放置陷阱
  FlashBomb = 12;   //防止闪光炸弹
  ThrowHammer = 13; //扔锤子
  Bow = 14;         //弓箭
  Stealer = 15;     //偷东西，可以偷食材
  ToolSize = 16;
}
enum TriggerType {
  WaveGlue = 0; //滔牌胶水，踩上后会减速，过一段时间自行消失
  Trap = 1; //陷阱，踩上后有一段时间不能动弹，地图上不可见
  Mine = 2; //地雷，踩上后减分数并眩晕一段时间，地图上不可见
  Bomb = 3; //炸弹，踩上后眩晕一段时间，并掉落身上的食材和道具，地图上不可见
  Arrow = 4; //箭，被射中后扣一定的分数并眩晕一段时间
  Hammer = 5; //锤子，被砸中后眩晕一段时间并掉落身上的食材和道具
  TriggerSize = 6;
}
enum Direction {
  Right = 0;
  RightUp = 1;
  Up = 2;
  LeftUp = 3;
  Left = 4;
  LeftDown = 5;
  Down = 6;
  RightDown = 7;
  DirectionSize = 8;
}
enum Talent {
  None = 0;
  Runner = 1;    // 跑步加速
  StrongMan = 2; //扔东西距离变远，扔锤子和射箭伤害更大
  Cook = 3;      //制作食材获得分数有一定加成
  Technician = 4; //防止地雷、陷阱、炸弹、使用传送门有一定加成
  LuckyBoy =
      5; //每隔一段时间在手上生成一个道具，若手上已有道具则在身边的地面生成
  TalentSize = 6;
}
message GameObject {
  double PositionX = 1;
  double PositionY = 2;
  Direction Direction = 3;
  ObjType ObjType = 4;
  BlockType BlockType = 5;
  DishType DishType = 6;
  ToolType ToolType = 7;
  TriggerType TriggerType = 8;
  bool isMoving = 9;
  string RecieveText = 10;
  int32 team = 11;
  int32 SightRange = 12;
  double MoveSpeed = 13;
  int32 MaxThrowDistance = 14;
}
message MessageToClient {
  map<int64, GameObject> GameObjectList = 1;
  repeated DishType Tasks = 2;
  map<int32, int32> Scores = 3;
}
